test/fail_compilation/fail142.d
class A {
	abstract void test() {	}
}

class B : A {
}

void main(){
	B b = new B();
}

